[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://font/DancingScript-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Map/Dice.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/LEFT.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UP.png" type="Texture" id=6]
[ext_resource path="res://Sprites/RIGHT.png" type="Texture" id=7]
[ext_resource path="res://Sprites/DOWN.png" type="Texture" id=8]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.8611, 35.0449 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="Player" type="Area2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 2500
limit_bottom = 2500

[node name="Label" type="Label" parent="Camera"]
margin_left = -19.9713
margin_top = -84.5872
margin_right = 20.0287
margin_bottom = -35.5872
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roi" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Dice" parent="." instance=ExtResource( 4 )]
position = Vector2( 1.40312, -98.2154 )

[node name="LEFT" type="Button" parent="."]
visible = false
margin_left = -133.065
margin_top = -48.2154
margin_right = -25.0652
margin_bottom = 53.7846
rect_pivot_offset = Vector2( 8.13452, -10.219 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RIGHT" type="Button" parent="."]
visible = false
margin_left = 27.5892
margin_top = -48.2154
margin_right = 135.589
margin_bottom = 53.7846
rect_pivot_offset = Vector2( 0, -1.40306 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UP" type="Button" parent="."]
visible = false
margin_left = -53.7916
margin_top = -133.483
margin_right = 54.2084
margin_bottom = -31.4831
rect_pivot_offset = Vector2( 0, -1.40306 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DOWN" type="Button" parent="."]
visible = false
margin_left = -53.7916
margin_top = 32.5
margin_right = 54.2084
margin_bottom = 134.5
rect_pivot_offset = Vector2( 0, -1.40306 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LEFT" to="." method="_on_LEFT_pressed"]
[connection signal="pressed" from="RIGHT" to="." method="_on_RIGHT_pressed"]
[connection signal="pressed" from="UP" to="." method="_on_UP_pressed"]
[connection signal="pressed" from="DOWN" to="." method="_on_DOWN_pressed"]
